mengganti ukuran font countDown

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </p>
             <ul
               id="countDown"
-              class="flex items-center justify-center text-center font-sans text-xl text-white lg:text-2xl"
+              class="flex items-center justify-center text-center font-sans text-lg text-white lg:text-2xl"
             ></ul>
           </div>
         </div>
