--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Amplop -->
     <div
       id="amplop"
-      class="fixed left-0 top-0 z-[9999] h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out"
+      class="fixed left-0 top-0 z-[9999] hidden h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out"
     >
       <div class="container">
         <div class="w-full px-4">
@@ -77,31 +77,51 @@
     </div>
 
     <!-- Beranda -->
-    <section id="beranda" class="pb-12 pt-16">
+    <section id="beranda" class="py-16">
       <div class="container">
         <div class="w-full px-4">
           <div class="mx-auto max-w-xl text-center">
             <h3
-              class="mb-10 border-b-2 border-t-2 p-4 font-serif text-2xl uppercase tracking-widest text-dark-1 md:text-3xl"
+              class="mb-12 border-b-2 border-t-2 p-4 font-serif text-2xl uppercase tracking-widest text-dark-1 md:text-3xl"
             >
               We'<span class="text-xl md:text-2xl">re</span>
               <span class="inline-block"> getting married</span>
             </h3>
             <h1
-              class="text-dark mb-6 font-display text-5xl tracking-wide md:text-6xl"
+              class="text-dark mb-12 font-display text-5xl tracking-wide md:text-6xl"
             >
               Era & Alif
             </h1>
             <p
-              class="mb-12 text-center font-sans text-xl font-semibold text-sage-5 hover:scale-110 transition"
+              class="mb-16 text-center font-sans text-xl font-semibold text-sage-5 transition hover:scale-110"
             >
-              12 &nbsp <span class="text-3xl font-bold ">.</span>&nbsp 08
+              12 &nbsp <span class="text-3xl font-bold">.</span>&nbsp 08
               &nbsp<span class="text-3xl font-bold">.</span>&nbsp 2023
             </p>
             <ul
               id="countDown"
               class="flex items-center justify-center text-center font-sans text-lg text-white lg:text-2xl"
             ></ul>
+          </div>
+
+          <div class="mx-auto pt-20 text-center">
+            <a href="#mempelai"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="mx-auto h-10 w-10 animate-bounce"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M9 12.75l3 3m0 0l3-3m-3 3v-7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                /></svg
+            ></a>
+
+            <p class="text-base">Gulir ke bawah</p>
           </div>
         </div>
       </div>
@@ -119,7 +139,8 @@
             </h4>
             <p class="mb-0">
               Dengan memohon rahmat dan ridho Allah SWT, kami bermaksud
-              mengundang Bapak/Ibu/Saudara/i untuk menghadiri resepsi pernikahan kami:
+              mengundang Bapak/Ibu/Saudara/i untuk menghadiri resepsi pernikahan
+              kami:
             </p>
             <div class="inline-flex w-full items-center justify-center">
               <hr class="my-8 h-px w-3/5 border-0 bg-sage-4 md:w-10/12" />
@@ -282,14 +303,12 @@
               </span>
             </div>
           </div>
-          
         </div>
-        
 
         <div class="flex flex-wrap justify-center">
           <div class="w-full max-w-md px-4 md:w-1/2">
             <div
-              class="mb-10 rounded-lg shadow-[rgba(50,_50,_105,_0.15)_0px_2px_5px_0px,_rgba(0,_0,_0,_0.05)_0px_1px_1px_0px]  bg-sage-1 shadow-sage-4"
+              class="mb-10 rounded-lg bg-sage-1 shadow-[rgba(50,_50,_105,_0.15)_0px_2px_5px_0px,_rgba(0,_0,_0,_0.05)_0px_1px_1px_0px] shadow-sage-4"
             >
               <div class="px-6 py-8 text-center">
                 <div class="flex h-auto items-center justify-center md:h-24">
@@ -316,92 +335,87 @@
             </div>
           </div>
           <div class="w-full max-w-md px-4 md:w-1/2">
-            <div
-              class="mb-10 rounded-lg shadow-[rgba(50,_50,_105,_0.15)_0px_2px_5px_0px,_rgba(0,_0,_0,_0.05)_0px_1px_1px_0px]  bg-sage-1 shadow-sage-4""
-            >
-              <div class="px-6 py-8 text-center">
-                <div class="flex h-auto items-center justify-center md:h-24">
-                  <h3
-                    class="mb-2 border-b border-sage-5 font-cursive text-3xl tracking-wider text-sage-5 lg:text-3xl"
-                  >
-                    Resepsi
-                  </h3>
-                </div>
-                <p class="mb-2 font-medium lg:text-lg">
-                  Sabtu, 12 Agustus 2023
-                </p>
-                <p class="mb-2 font-medium lg:text-lg">
-                  Pukul 11.00 s.d. 13.00 WIB
-                </p>
-                <h5 class="font-medium uppercase">
-                  Gedung Pertemuan Graha Sativa
-                </h5>
-                <p class="text-base">Lokasi:</p>
-                <p class="mb-4">
-                  Komplek BULOG 1 <br />
-                  Jl. Yanatera Raya, RT.003/RW.001, <br />
-                  Jatimelati, Pondok Melati, Kota Bekasi
-                </p>
+            <div class="mb-10 rounded-lg
+            shadow-[rgba(50,_50,_105,_0.15)_0px_2px_5px_0px,_rgba(0,_0,_0,_0.05)_0px_1px_1px_0px]
+            bg-sage-1 shadow-sage-4"" >
+            <div class="px-6 py-8 text-center">
+              <div class="flex h-auto items-center justify-center md:h-24">
+                <h3
+                  class="mb-2 border-b border-sage-5 font-cursive text-3xl tracking-wider text-sage-5 lg:text-3xl"
+                >
+                  Resepsi
+                </h3>
               </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="flex flex-wrap justify-center">
-          <div class="w-full max-w-md px-4 md:w-1/2">
-            <div class="px-6 py-8 text-center">
-              <a
-                href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=N2NkYmI2ZTBtZjFocWJ2YWFydHFuaHFrcGIgZXRlcm5hbDEyMDgyM0Bt&tmsrc=eternal120823%40gmail.com"
-                target="_blank"
-                class="button"
-                ><svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="h-6 w-6"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 012.25-2.25h13.5A2.25 2.25 0 0121 7.5v11.25m-18 0A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75m-18 0v-7.5A2.25 2.25 0 015.25 9h13.5A2.25 2.25 0 0121 11.25v7.5m-9-6h.008v.008H12v-.008zM12 15h.008v.008H12V15zm0 2.25h.008v.008H12v-.008zM9.75 15h.008v.008H9.75V15zm0 2.25h.008v.008H9.75v-.008zM7.5 15h.008v.008H7.5V15zm0 2.25h.008v.008H7.5v-.008zm6.75-4.5h.008v.008h-.008v-.008zm0 2.25h.008v.008h-.008V15zm0 2.25h.008v.008h-.008v-.008zm2.25-4.5h.008v.008H16.5v-.008zm0 2.25h.008v.008H16.5V15z"
-                  />
-                </svg>
-                Simpan ke Kalender</a
-              >
-            </div>
-          </div>
-          <div class="w-full max-w-md px-4 md:w-1/2">
-            <div class="px-6 py-8 text-center">
-              <a
-                href="https://goo.gl/maps/DX9hFVZB1RF67z4v8"
-                target="_blank"
-                class="button"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="h-6 w-6"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M9 6.75V15m6-6v8.25m.503 3.498l4.875-2.437c.381-.19.622-.58.622-1.006V4.82c0-.836-.88-1.38-1.628-1.006l-3.869 1.934c-.317.159-.69.159-1.006 0L9.503 3.252a1.125 1.125 0 00-1.006 0L3.622 5.689C3.24 5.88 3 6.27 3 6.695V19.18c0 .836.88 1.38 1.628 1.006l3.869-1.934c.317-.159.69-.159 1.006 0l4.994 2.497c.317.158.69.158 1.006 0z"
-                  />
-                </svg>
-                Penunjuk Lokasi</a
-              >
+              <p class="mb-2 font-medium lg:text-lg">Sabtu, 12 Agustus 2023</p>
+              <p class="mb-2 font-medium lg:text-lg">
+                Pukul 11.00 s.d. 13.00 WIB
+              </p>
+              <h5 class="font-medium uppercase">
+                Gedung Pertemuan Graha Sativa
+              </h5>
+              <p class="text-base">Lokasi:</p>
+              <p class="mb-4">
+                Komplek BULOG 1 <br />
+                Jl. Yanatera Raya, RT.003/RW.001, <br />
+                Jatimelati, Pondok Melati, Kota Bekasi
+              </p>
             </div>
           </div>
         </div>
       </div>
-      <!-- <div
-        class="h-32 w-full border-none bg-gradient-to-b from-white from-10% to-sage-1 to-90%"
-      ></div> -->
+
+      <div class="flex flex-wrap justify-center">
+        <div class="w-full max-w-md px-4 md:w-1/2">
+          <div class="px-6 py-8 text-center">
+            <a
+              href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=N2NkYmI2ZTBtZjFocWJ2YWFydHFuaHFrcGIgZXRlcm5hbDEyMDgyM0Bt&tmsrc=eternal120823%40gmail.com"
+              target="_blank"
+              class="button"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="h-6 w-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 012.25-2.25h13.5A2.25 2.25 0 0121 7.5v11.25m-18 0A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75m-18 0v-7.5A2.25 2.25 0 015.25 9h13.5A2.25 2.25 0 0121 11.25v7.5m-9-6h.008v.008H12v-.008zM12 15h.008v.008H12V15zm0 2.25h.008v.008H12v-.008zM9.75 15h.008v.008H9.75V15zm0 2.25h.008v.008H9.75v-.008zM7.5 15h.008v.008H7.5V15zm0 2.25h.008v.008H7.5v-.008zm6.75-4.5h.008v.008h-.008v-.008zm0 2.25h.008v.008h-.008V15zm0 2.25h.008v.008h-.008v-.008zm2.25-4.5h.008v.008H16.5v-.008zm0 2.25h.008v.008H16.5V15z"
+                />
+              </svg>
+              Simpan ke Kalender</a
+            >
+          </div>
+        </div>
+        <div class="w-full max-w-md px-4 md:w-1/2">
+          <div class="px-6 py-8 text-center">
+            <a
+              href="https://goo.gl/maps/DX9hFVZB1RF67z4v8"
+              target="_blank"
+              class="button"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="h-6 w-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M9 6.75V15m6-6v8.25m.503 3.498l4.875-2.437c.381-.19.622-.58.622-1.006V4.82c0-.836-.88-1.38-1.628-1.006l-3.869 1.934c-.317.159-.69.159-1.006 0L9.503 3.252a1.125 1.125 0 00-1.006 0L3.622 5.689C3.24 5.88 3 6.27 3 6.695V19.18c0 .836.88 1.38 1.628 1.006l3.869-1.934c.317-.159.69-.159 1.006 0l4.994 2.497c.317.158.69.158 1.006 0z"
+                />
+              </svg>
+              Penunjuk Lokasi</a
+            >
+          </div>
+        </div>
+      </div>
+      <!-- </div> -->
     </section>
 
     <!-- Penutup-->
@@ -427,7 +441,9 @@
     <!-- Kutipan -->
     <section id="kutipan" class="bg-dark-1 py-8">
       <div class="container">
-        <div class="w-full px-4 text-center text-lg italic text-white tracking-normal">
+        <div
+          class="w-full px-4 text-center text-lg italic tracking-normal text-white"
+        >
           <h6 class="py-4">
             “Dan di antara tanda-tanda kekuasaan-Nya lah Dia menciptakan untukmu
             istri-istri dari jenismu sendiri, supaya kamu cenderung dan merasa
