menambah kata 'putra putri' pada #penutup

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
             <p>
               Merupakan suatu kehormatan dan kebahagiaan bagi kami apabila
               Bapak/Ibu/Saudara/i berkenan hadir untuk memberikan doa restu
-              kepada kami.
+              kepada putra putri kami.
             </p>
             <h4
               class="mt-4 font-cursive text-2xl tracking-wide text-dark-1 md:text-3xl"
