menambah teks 'Kami yang berbahagia' pada #penutup

--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
             </h4>
             <p class="mb-0">
               Dengan memohon rahmat dan ridho Allah SWT, kami bermaksud
-              mengundang Bapak/Ibu/Saudara/i untuk menghadiri resepsi pernikahan putra putri
-              kami:
+              mengundang Bapak/Ibu/Saudara/i untuk menghadiri resepsi pernikahan
+              putra putri kami:
             </p>
             <div class="inline-flex w-full items-center justify-center">
               <hr class="my-8 h-px w-3/5 border-0 bg-sage-4 md:w-10/12" />
@@ -433,6 +433,20 @@
             >
               Wassalamualaikum Warahmatullahi Wabarakatuh
             </h4>
+          </div>
+
+          <div class="text-center">
+            <p class="mb-4">Kami yang berbahagia:</p>
+            <div class="md:flex  md:justify-center md:items-center ">
+              <p class="font-bold lg:w-1/5">
+                Keluarga <br class="hidden md:inline">
+                Bapak Subawani - <br />Ibu Ngati
+              </p>
+              <p class="text-xl font-bold md:w-1/5 my-2">&</p>
+              <p class="font-bold lg:w-1/5">
+                Keluarga <br class="hidden md:inline">Bapak H. M. Muchsin - <br />Ibu Hj. Bekti Pertiwi
+              </p>
+            </div>
           </div>
         </div>
       </div>
