menambah efek hover pada #beranda

--- a/index.html
+++ b/index.html
@@ -82,10 +82,12 @@
         <div class="w-full px-4">
           <div class="mx-auto max-w-xl text-center">
             <h3
-              class="mb-12 border-b-2 border-t-2 p-4 font-serif text-2xl uppercase tracking-widest text-dark-1 md:text-3xl"
+              class="group mb-12 border-b-2 border-t-2 p-4 font-serif text-2xl uppercase tracking-widest text-dark-1 transition md:text-3xl"
             >
               We'<span class="text-xl md:text-2xl">re</span>
-              <span class="inline-block"> getting married</span>
+              <span class="inline-block duration-500 group-hover:translate-x-4 group-hover:scale-110">
+                getting married</span
+              >
             </h3>
             <h1
               class="text-dark mb-12 font-display text-5xl tracking-wide md:text-6xl"
@@ -437,14 +439,15 @@
 
           <div class="text-center">
             <p class="mb-4">Kami yang berbahagia:</p>
-            <div class="md:flex  md:justify-center md:items-center ">
+            <div class="md:flex md:items-center md:justify-center">
               <p class="font-bold lg:w-1/5">
-                Keluarga <br class="hidden md:inline">
+                Keluarga <br class="hidden md:inline" />
                 Bapak Subawani - <br />Ibu Ngati
               </p>
-              <p class="text-xl font-bold md:w-1/5 my-2">&</p>
+              <p class="my-2 text-xl font-bold md:w-1/5">&</p>
               <p class="font-bold lg:w-1/5">
-                Keluarga <br class="hidden md:inline">Bapak H. M. Muchsin - <br />Ibu Hj. Bekti Pertiwi
+                Keluarga <br class="hidden md:inline" />Bapak H. M. Muchsin -
+                <br />Ibu Hj. Bekti Pertiwi
               </p>
             </div>
           </div>
