--- a/index.html
+++ b/index.html
@@ -85,17 +85,48 @@
               class="group mb-12 border-b-2 border-t-2 p-4 font-serif text-2xl uppercase tracking-widest text-dark-1 transition md:text-3xl"
             >
               We'<span class="text-xl md:text-2xl">re</span>
-              <span class="inline-block duration-500 group-hover:translate-x-4 group-hover:scale-110">
+              <span
+                class="inline-block duration-500 group-hover:translate-x-4 group-hover:scale-110"
+              >
                 getting married</span
               >
             </h3>
-            <h1
-              class="text-dark mb-12 font-display text-5xl tracking-wide md:text-6xl"
+            <!-- <h1
+              class="mb-12 font-display text-5xl tracking-wide text-dark-1 md:text-6xl"
             >
               Era & Alif
-            </h1>
+            </h1> -->
+
+            <ul
+              class="tracking group mb-12 inline-flex font-display text-5xl text-dark-1 transition-all md:text-6xl"
+            >
+              <li
+                class="translate-x-6 duration-300 group-hover:translate-x-12 md:group-hover:translate-x-16"
+              >
+                E
+              </li>
+              <li class="translate-x-6 duration-300 group-hover:scale-0">ra</li>
+              <li
+                class="scale-0 text-dark-2 duration-300 group-hover:inline-flex group-hover:translate-x-4 group-hover:scale-100"
+              >
+                tern
+              </li>
+              <li
+                class="-translate-x-8 text-dark-2 duration-300 group-hover:scale-0 md:-translate-x-10"
+              >
+                &nbsp;&&nbsp;
+              </li>
+              <li
+                class="-translate-x-6 duration-300 group-hover:-translate-x-8 md:group-hover:-translate-x-12"
+              >
+                Al
+              </li>
+              <li class="-translate-x-6 duration-500 group-hover:scale-0">
+                if
+              </li>
+            </ul>
             <p
-              class="mb-16 text-center font-sans text-xl font-semibold text-sage-5 transition hover:scale-110"
+              class="mb-16 text-center font-sans text-xl font-semibold text-sage-5"
             >
               12 &nbsp <span class="text-3xl font-bold">.</span>&nbsp 08
               &nbsp<span class="text-3xl font-bold">.</span>&nbsp 2023
