--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
     <!-- Amplop -->
     <div
       id="amplop"
-      class="fixed left-0 top-0 z-[9999] hidden h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out"
+      class="fixed left-0 top-0 z-[9999] h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out"
     >
       <div class="container">
         <div class="w-full px-4">
           <div class="mx-auto max-w-xl py-8 text-center">
             <h3
-              class="mb-12 mt-8 border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl uppercase tracking-widest text-dark-1 md:text-3xl"
+              class="mb-12 mt-8 border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 md:text-3xl"
             >
               The Wedding of
             </h3>
-            <h1 class="mb-8 font-display text-5xl tracking-wider md:text-6xl">
-              Era & Alif
+            <h1
+              class="mb-8 font-display text-5xl tracking-wider text-dark-2 md:text-6xl"
+            >
+              Era <span class="text-dark-1">&</span> Alif
             </h1>
             <!-- <h1
               class="group mb-8 font-display text-5xl tracking-wider transition-all md:text-6xl"
@@ -39,18 +41,18 @@
               E<span class="group-hover:hidden">tern</span>Al
             </h1> -->
             <p
-              class="mb-12 text-center font-sans text-2xl font-semibold text-sage-5"
+              class="mb-12 text-center font-sans text-2xl font-semibold text-dark-1"
             >
               12 &nbsp <span class="text-3xl font-bold">.</span>&nbsp 08
               &nbsp<span class="text-3xl font-bold">.</span>&nbsp 2023
             </p>
-            <h4 class="mb-4 font-serif-2 text-lg tracking-wide">
+            <h4 class="mb-4 font-serif-2 text-lg font-semibold tracking-wide">
               Yth. Bapak/Ibu/Saudara/i :
             </h4>
             <p
               class="font-display text-3xl font-medium tracking-wider md:text-4xl"
             >
-              <span id="nama-tamu" class="border-b-2 border-zinc-300"></span>
+              <span id="nama-tamu"></span>
             </p>
           </div>
           <div class="px-6 py-4 text-center">
@@ -82,7 +84,7 @@
         <div class="w-full px-4">
           <div class="mx-auto max-w-xl text-center">
             <h3
-              class="group mb-12 border-b-2 border-t-2 p-4 font-serif text-2xl uppercase tracking-widest text-dark-1 transition md:text-3xl"
+              class="group mb-12 border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 p-4 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 transition md:text-3xl"
             >
               We'<span class="text-xl md:text-2xl">re</span>
               <span
@@ -98,7 +100,7 @@
             </h1> -->
 
             <ul
-              class="tracking group mb-12 inline-flex font-display text-5xl text-dark-1 transition-all md:text-6xl"
+              class="tracking group mb-12 inline-flex font-display text-5xl text-dark-2 transition-all md:text-6xl"
             >
               <li
                 class="translate-x-6 duration-300 group-hover:translate-x-12 md:group-hover:translate-x-16"
@@ -107,12 +109,12 @@
               </li>
               <li class="translate-x-6 duration-300 group-hover:scale-0">ra</li>
               <li
-                class="scale-0 text-dark-2 duration-300 group-hover:inline-flex group-hover:translate-x-4 group-hover:scale-100"
+                class="scale-0 text-dark-1 duration-300 group-hover:inline-flex group-hover:translate-x-4 group-hover:scale-100"
               >
                 tern
               </li>
               <li
-                class="-translate-x-8 text-dark-2 duration-300 group-hover:scale-0 md:-translate-x-10"
+                class="-translate-x-8 text-dark-1 duration-300 group-hover:scale-0 md:-translate-x-10"
               >
                 &nbsp;&&nbsp;
               </li>
@@ -126,7 +128,7 @@
               </li>
             </ul>
             <p
-              class="mb-16 text-center font-sans text-xl font-semibold text-sage-5"
+              class="mb-16 text-center font-sans text-xl font-semibold text-dark-1"
             >
               12 &nbsp <span class="text-3xl font-bold">.</span>&nbsp 08
               &nbsp<span class="text-3xl font-bold">.</span>&nbsp 2023
@@ -153,8 +155,6 @@
                   d="M9 12.75l3 3m0 0l3-3m-3 3v-7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                 /></svg
             ></a>
-
-            <p class="text-base">Gulir ke bawah</p>
           </div>
         </div>
       </div>
