menambah kategori tamu

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             >
               <span id="nama-tamu"></span>
             </p>
+            <p class="bg-red-500 w20 h-20"><span id="kategori-tamu"></span></p>
           </div>
           <div class="px-6 py-4 text-center">
             <button id="buka-undangan" class="button">
