mengubah padding & margin pada #beranda

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <!-- Amplop -->
     <div
       id="amplop"
-      class="fixed left-0 top-0 z-[9999] h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out"
+      class="fixed left-0 top-0 z-[9999] h-screen w-full bg-sage-1 transition duration-[400ms] ease-in-out"
     >
       <div class="container">
-        <div class="w-full px-4">
+        <div class="h-screen w-full px-4">
           <div class="mx-auto max-w-xl py-8 text-center">
             <h3
               class="mb-12 mt-8 border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 md:text-3xl"
@@ -54,7 +54,7 @@
             >
               <span id="nama-tamu"></span>
             </p>
-            <p class="bg-red-500 w20 h-20"><span id="kategori-tamu"></span></p>
+            <p class="py-2"><span id="kategori-tamu"></span></p>
           </div>
           <div class="px-6 py-4 text-center">
             <button id="buka-undangan" class="button">
@@ -80,12 +80,12 @@
     </div>
 
     <!-- Beranda -->
-    <section id="beranda" class="py-16">
+    <section id="beranda" class="max-h-screen py-12">
       <div class="container">
-        <div class="w-full px-4">
+        <div class="h-screen w-full px-4">
           <div class="mx-auto max-w-xl text-center">
             <h3
-              class="group mb-12 border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 p-4 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 transition md:text-3xl"
+              class="group my-[16.67%] border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 p-4 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 transition md:text-3xl"
             >
               We'<span class="text-xl md:text-2xl">re</span>
               <span
@@ -101,26 +101,26 @@
             </h1> -->
 
             <ul
-              class="tracking group mb-12 inline-flex font-display text-5xl text-dark-2 transition-all md:text-6xl"
+              class="tracking group mb-[16.67%] inline-flex font-display text-5xl text-dark-2 transition md:text-6xl"
             >
               <li
-                class="translate-x-6 duration-300 group-hover:translate-x-12 md:group-hover:translate-x-16"
+                class="translate-x-6 delay-200 duration-500 group-hover:translate-x-12 md:group-hover:translate-x-16"
               >
                 E
               </li>
-              <li class="translate-x-6 duration-300 group-hover:scale-0">ra</li>
+              <li class="translate-x-6 duration-500 group-hover:scale-0">ra</li>
               <li
-                class="scale-0 text-dark-1 duration-300 group-hover:inline-flex group-hover:translate-x-4 group-hover:scale-100"
+                class="scale-0 text-dark-1 duration-500 group-hover:inline-flex group-hover:translate-x-4 group-hover:scale-100"
               >
                 tern
               </li>
               <li
-                class="-translate-x-8 text-dark-1 duration-300 group-hover:scale-0 md:-translate-x-10"
+                class="-translate-x-8 text-dark-1 duration-500 group-hover:scale-0 md:-translate-x-10"
               >
                 &nbsp;&&nbsp;
               </li>
               <li
-                class="-translate-x-6 duration-300 group-hover:-translate-x-8 md:group-hover:-translate-x-12"
+                class="-translate-x-6 delay-200 duration-500 group-hover:-translate-x-8 md:group-hover:-translate-x-12"
               >
                 Al
               </li>
@@ -129,18 +129,18 @@
               </li>
             </ul>
             <p
-              class="mb-16 text-center font-sans text-xl font-semibold text-dark-1"
+              class="mb-[16.67%] text-center font-sans text-xl font-semibold text-dark-1"
             >
               12 &nbsp <span class="text-3xl font-bold">.</span>&nbsp 08
               &nbsp<span class="text-3xl font-bold">.</span>&nbsp 2023
             </p>
             <ul
               id="countDown"
-              class="flex items-center justify-center text-center font-sans text-lg text-white lg:text-2xl"
+              class="mb-[16.67%] flex h-4/5 items-center justify-center text-center font-sans text-lg text-white lg:text-2xl"
             ></ul>
           </div>
 
-          <div class="mx-auto pt-20 text-center">
+          <div class="text-center">
             <a href="#mempelai"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
