menambah kategori tamu pada #amplop

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <div class="h-screen w-full px-4">
           <div class="mx-auto max-w-xl py-8 text-center">
             <h3
-              class="mb-12 mt-8 border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 md:text-3xl"
+              class="my-[15%] border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 md:text-3xl"
             >
               The Wedding of
             </h3>
             <h1
-              class="mb-8 font-display text-5xl tracking-wider text-dark-2 md:text-6xl"
+              class="mb-[4%] font-display text-5xl tracking-wider text-dark-2 md:text-6xl"
             >
               Era <span class="text-dark-1">&</span> Alif
             </h1>
@@ -41,20 +41,29 @@
               E<span class="group-hover:hidden">tern</span>Al
             </h1> -->
             <p
-              class="mb-12 text-center font-sans text-2xl font-semibold text-dark-1"
+              class="mb-[15%] text-center font-sans text-2xl font-semibold text-dark-1"
             >
               12 &nbsp <span class="text-3xl font-bold">.</span>&nbsp 08
               &nbsp<span class="text-3xl font-bold">.</span>&nbsp 2023
             </p>
-            <h4 class="mb-4 font-serif-2 text-lg font-semibold tracking-wide">
+            <h4
+              class="mb-[4%] font-serif-2 text-lg font-semibold tracking-wide"
+            >
               Yth. Bapak/Ibu/Saudara/i :
             </h4>
             <p
-              class="font-display text-3xl font-medium tracking-wider md:text-4xl"
+              class="mb-[4%] font-display text-3xl font-medium tracking-wider md:text-4xl"
             >
               <span id="nama-tamu"></span>
             </p>
-            <p class="py-2"><span id="kategori-tamu"></span></p>
+            <p class="mb-[10%] py-2" id="kategori-tamu">
+              <!-- <span
+                class="mx-2 rounded-md bg-gradient-to-r from-orange-600 to-orange-500 px-6 py-3 text-2xl font-extrabold tracking-widest text-white font-sans "
+              >
+                VIP </span
+              ><span id="kategori-tamu"></span> -->
+              
+            </p>
           </div>
           <div class="px-6 py-4 text-center">
             <button id="buka-undangan" class="button">
