mengubah ukuran font pada #amplop

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Amplop -->
     <div
       id="amplop"
-      class="fixed left-0 top-0 z-[9999] h-screen w-full bg-sage-1 transition duration-[400ms] ease-in-out"
+      class="fixed left-0 top-0 z-[9999] h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out"
     >
       <div class="container">
         <div class="h-screen w-full px-4">
@@ -47,12 +47,12 @@
               &nbsp<span class="text-3xl font-bold">.</span>&nbsp 2023
             </p>
             <h4
-              class="mb-[4%] font-serif-2 text-lg font-semibold tracking-wide"
+              class="mb-[4%] font-serif-2 text-base sm:text-lg md:text-xl font-semibold tracking-wide"
             >
               Yth. Bapak/Ibu/Saudara/i :
             </h4>
             <p
-              class="mb-[4%] font-display text-3xl font-medium tracking-wider md:text-4xl"
+              class="mb-[4%] font-display text-lg tracking-wider sm:text-xl md:text-2xl lg:text-3xl"
             >
               <span id="nama-tamu"></span>
             </p>
@@ -62,10 +62,9 @@
               >
                 VIP </span
               ><span id="kategori-tamu"></span> -->
-              
             </p>
           </div>
-          <div class="px-6 py-4 text-center">
+          <div class="px-6 pb-2 pt-4 text-center">
             <button id="buka-undangan" class="button">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -89,7 +88,7 @@
     </div>
 
     <!-- Beranda -->
-    <section id="beranda" class="max-h-screen py-12">
+    <section id="beranda" class="max-h-screen pt-12">
       <div class="container">
         <div class="h-screen w-full px-4">
           <div class="mx-auto max-w-xl text-center">
