--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       class="fixed left-0 top-0 z-[9999] h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out"
     >
       <div class="container">
-        <div class="h-screen w-full px-4">
+        <div class="h-full w-full px-4">
           <div class="mx-auto max-w-xl py-8 text-center">
             <h3
               class="my-[15%] border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 md:text-3xl"
@@ -64,7 +64,7 @@
               ><span id="kategori-tamu"></span> -->
             </p>
           </div>
-          <div class="px-6 pb-2 pt-4 text-center">
+          <div class="px-6 py-4 text-center">
             <button id="buka-undangan" class="button">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
