--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               &nbsp<span class="text-3xl font-bold">.</span>&nbsp 2023
             </p>
             <h4
-              class="mb-[4%] font-serif-2 text-base sm:text-lg md:text-xl font-semibold tracking-wide"
+              class="mb-[4%] font-serif-2 text-base font-semibold tracking-wide sm:text-lg md:text-xl"
             >
               Yth. Bapak/Ibu/Saudara/i :
             </h4>
@@ -537,7 +537,7 @@
 
     <footer class="relative block justify-center bg-dark-2 py-4 text-center">
       <div class="z-50 mb-16 block font-sans text-base text-white">
-        Dibuat dengan <span class="text-lg text-pink-500">❤️</span> oleh
+        Dibuat dengan <span class="text-lg text-white">❤️</span> oleh
         <a
           target="_blank"
           href="https://github.com/eternal51"
