mengubah animasi pada nama Era & Alif

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Amplop -->
     <div
       id="amplop"
-      class="fixed left-0 top-0 z-[9999] h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out"
+      class="fixed left-0 top-0 z-[9999] hidden h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out"
     >
       <div class="container">
         <div class="h-full w-full px-4">
@@ -52,7 +52,7 @@
               Yth. Bapak/Ibu/Saudara/i :
             </h4>
             <p
-              class="mb-[4%] font-display text-lg tracking-wider sm:text-xl md:text-2xl lg:text-3xl"
+              class="mb-[4%] font-display text-2xl tracking-wider md:text-3xl lg:text-4xl"
             >
               <span id="nama-tamu"></span>
             </p>
@@ -111,28 +111,34 @@
             <ul
               class="tracking group mb-[16.67%] inline-flex font-display text-5xl text-dark-2 transition md:text-6xl"
             >
-              <li
+              <li class="animate-e md:animate-emd">
+                <!-- <li
                 class="translate-x-6 delay-200 duration-500 group-hover:translate-x-12 md:group-hover:translate-x-16"
-              >
+              > -->
                 E
               </li>
-              <li class="translate-x-6 duration-500 group-hover:scale-0">ra</li>
-              <li
+              <!-- <li class="translate-x-6 duration-500 group-hover:scale-0"> -->
+              <li class="animate-ra">ra</li>
+              <li class="animate-tern text-dark-1">
+                <!-- <li
                 class="scale-0 text-dark-1 duration-500 group-hover:inline-flex group-hover:translate-x-4 group-hover:scale-100"
-              >
+              > -->
                 tern
               </li>
-              <li
+              <li class="animate-dan text-dark-1 md:animate-danmd">
+                <!-- <li
                 class="-translate-x-8 text-dark-1 duration-500 group-hover:scale-0 md:-translate-x-10"
-              >
+              > -->
                 &nbsp;&&nbsp;
               </li>
-              <li
+              <li class="animate-al md:animate-almd">
+                <!-- <li
                 class="-translate-x-6 delay-200 duration-500 group-hover:-translate-x-8 md:group-hover:-translate-x-12"
-              >
+              > -->
                 Al
               </li>
-              <li class="-translate-x-6 duration-500 group-hover:scale-0">
+              <li class="animate-if">
+                <!-- <li class="-translate-x-6 duration-500 group-hover:scale-0"> -->
                 if
               </li>
             </ul>
