--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eternal | Era & Alif</title>
 
-
     <!-- CSS -->
     <link rel="stylesheet" href="dist/css/style.css" />
   </head>
@@ -44,18 +43,19 @@
             >
               Yth. Bapak/Ibu/Saudara/i :
             </h4>
-            <p
-              class="mb-[4%] font-display text-2xl tracking-wider md:text-3xl lg:text-4xl"
+            <ul
+              class="mb-[4%] inline-flex font-display text-2xl tracking-wider md:text-3xl lg:text-4xl items-center"
             >
-              <span id="nama-tamu"></span>
-            </p>
-            <p class="mb-[10%] py-2" id="kategori-tamu">
-              <!-- <span
+              <li id="kategori-tamu"></li>
+              <li id="nama-tamu"></li>
+            </ul>
+            <!-- <p class="mb-[10%] py-2" id="kategori-tamu"> -->
+            <!-- <span
                 class="mx-2 rounded-md bg-gradient-to-r from-orange-600 to-orange-500 px-6 py-3 text-2xl font-extrabold tracking-widest text-white font-sans "
               >
                 VIP </span
               ><span id="kategori-tamu"></span> -->
-            </p>
+            <!-- </p> -->
           </div>
           <div class="px-6 py-4 text-center">
             <button id="buka-undangan" class="button">
