mengubah style kategori tamu (2)

--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
             >
               Yth. Bapak/Ibu/Saudara/i :
             </h4>
-            <ul
-              class="mb-[4%] inline-flex font-display text-2xl tracking-wider md:text-3xl lg:text-4xl items-center"
+            <p class="mb-[4%] py-2 inline-flex font-display text-2xl tracking-wider md:text-3xl lg:text-4xl items-center"
             >
-              <li id="kategori-tamu"></li>
-              <li id="nama-tamu"></li>
-            </ul>
+              <span id="kategori-tamu" class="flex"></span>
+              <span id="nama-tamu"></span>
+            </p>
             <!-- <p class="mb-[10%] py-2" id="kategori-tamu"> -->
             <!-- <span
                 class="mx-2 rounded-md bg-gradient-to-r from-orange-600 to-orange-500 px-6 py-3 text-2xl font-extrabold tracking-widest text-white font-sans "
