mengubah style countdown

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             >
               Yth. Bapak/Ibu/Saudara/i :
             </h4>
-            <p class="mb-[4%] py-2 inline-flex font-display text-2xl tracking-wider md:text-3xl lg:text-4xl items-center"
+            <p
+              class="mb-[4%] inline-flex items-center py-2 font-display text-2xl tracking-wider md:text-3xl lg:text-4xl"
             >
               <span id="kategori-tamu" class="flex"></span>
               <span id="nama-tamu"></span>
@@ -110,7 +111,7 @@
                 E
               </li>
               <!-- <li class="translate-x-6 duration-500 group-hover:scale-0"> -->
-              <li class="animate-ra">ra</li>
+              <li class="animate-ra delay-300">ra</li>
               <li class="animate-tern text-dark-1">
                 <!-- <li
                 class="scale-0 text-dark-1 duration-500 group-hover:inline-flex group-hover:translate-x-4 group-hover:scale-100"
@@ -142,7 +143,7 @@
             </p>
             <ul
               id="countDown"
-              class="mb-[16.67%] flex h-4/5 items-center justify-center text-center font-sans text-lg text-white lg:text-2xl"
+              class="mb-[16.67%] flex items-center justify-center text-center font-sans text-lg text-white lg:text-2xl"
             ></ul>
           </div>
 
