--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 E
               </li>
               <!-- <li class="translate-x-6 duration-500 group-hover:scale-0"> -->
-              <li class="animate-ra delay-300">ra</li>
+              <li class="animate-ra">ra</li>
               <li class="animate-tern text-dark-1">
                 <!-- <li
                 class="scale-0 text-dark-1 duration-500 group-hover:inline-flex group-hover:translate-x-4 group-hover:scale-100"
