fix: mengubah posisi kategori tamu

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
               Yth. Bapak/Ibu/Saudara/i :
             </h4>
             <p
-              class="mb-[4%] inline-flex items-center py-2 font-display text-2xl tracking-wider md:text-3xl lg:text-4xl"
+              class="mb-[4%] block py-2 font-display text-2xl tracking-wider md:text-3xl lg:text-4xl"
             >
-              <span id="kategori-tamu" class="flex"></span>
-              <span id="nama-tamu"></span>
+              <span id="nama-tamu" class="mb-4"></span>
+              <span id="kategori-tamu" class="block"></span>
             </p>
             <!-- <p class="mb-[10%] py-2" id="kategori-tamu"> -->
             <!-- <span
