--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Amplop -->
     <div
       id="amplop"
-      class="fixed left-0 top-0 z-[9999] h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out"
+      class="fixed left-0 top-0 z-[9999] hidden h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out"
     >
       <div class="container">
         <div class="h-full w-full px-4">
@@ -143,7 +143,7 @@
             </p>
             <ul
               id="countDown"
-              class="mb-[16.67%] flex items-center justify-center text-center font-sans text-lg text-white lg:text-2xl"
+              class="mb-[16.67%] flex text-center justify-center font-sans text-lg text-white lg:text-2xl"
             ></ul>
           </div>
 
