refactor: menampilkan kategori tamu tanpa parameter query

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p
               class="mb-[4%] block py-2 font-display text-2xl tracking-wider md:text-3xl lg:text-4xl"
             >
-              <span id="nama-tamu" class="mb-4"></span>
+              <span id="nama-tamu" class="mb-[2%] block"></span>
               <span id="kategori-tamu" class="block"></span>
             </p>
             <!-- <p class="mb-[10%] py-2" id="kategori-tamu"> -->
