refactor: mengubah padding #home

--- a/index.html
+++ b/index.html
@@ -12,34 +12,34 @@
     <!-- Amplop -->
     <div
       id="amplop"
-      class="fixed left-0 top-0 z-[9999] h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out"
+      class="fixed left-0 top-0 z-[9999] h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out hidden"
     >
       <div class="container">
         <div class="h-full w-full px-4">
           <div class="mx-auto max-w-xl py-8 text-center">
             <h3
-              class="my-[15%] border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 md:text-3xl"
+              class="my-12 border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 md:text-3xl"
             >
               The Wedding of
             </h3>
             <h1
-              class="mb-[4%] font-display text-5xl tracking-wider text-dark-2 md:text-6xl"
+              class="mb-8 font-display text-5xl tracking-wider text-dark-2 md:text-6xl"
             >
               Era <span class="text-dark-1">&</span> Alif
             </h1>
             <p
-              class="mb-[15%] text-center font-sans text-2xl font-semibold text-dark-1"
+              class="mb-12 text-center font-sans text-2xl font-semibold text-dark-1"
             >
               12 &nbsp <span class="text-3xl font-bold">.</span>&nbsp 08
               &nbsp<span class="text-3xl font-bold">.</span>&nbsp 2023
             </p>
             <h4
-              class="mb-[4%] font-serif-2 text-base font-semibold tracking-wide sm:text-lg md:text-xl"
+              class="mb-2 font-serif-2 text-base font-semibold tracking-wide sm:text-lg md:text-xl"
             >
               Yth. Bapak/Ibu/Saudara/i :
             </h4>
             <p
-              class="mb-[4%] block py-2 font-display text-2xl tracking-wider md:text-3xl lg:text-4xl"
+              class="mb-2 block py-2 font-display text-2xl tracking-wider md:text-3xl lg:text-4xl"
             >
               <span id="nama-tamu" class="mb-[2%] block"></span>
               <span id="kategori-tamu" class="block"></span>
@@ -69,12 +69,12 @@
     </div>
 
     <!-- Beranda -->
-    <section id="beranda" class="max-h-screen pt-12">
+    <section id="beranda" class="py-8">
       <div class="container">
         <div class="h-screen w-full px-4">
           <div class="mx-auto max-w-xl text-center">
             <h3
-              class="group my-[16.67%] border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 p-4 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 transition md:text-3xl"
+              class="group my-[10%] border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 p-4 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 transition md:text-3xl"
             >
               We'<span class="text-xl md:text-2xl">re</span>
               <span
@@ -84,7 +84,7 @@
               >
             </h3>
             <ul
-              class="tracking group mb-[16.67%] inline-flex font-display text-5xl text-dark-2 transition md:text-6xl"
+              class="tracking group mb-[10%] inline-flex font-display text-5xl text-dark-2 transition md:text-6xl"
             >
               <li class="animate-e md:animate-emd">
                 E
@@ -104,14 +104,14 @@
               </li>
             </ul>
             <p
-              class="mb-[16.67%] text-center font-sans text-xl font-semibold text-dark-1"
+              class="mb-[10%] text-center font-sans text-xl font-semibold text-dark-1"
             >
               12 &nbsp <span class="text-3xl font-bold">.</span>&nbsp 08
               &nbsp<span class="text-3xl font-bold">.</span>&nbsp 2023
             </p>
             <ul
               id="countDown"
-              class="mb-[16.67%] flex justify-center text-center font-sans text-lg text-white lg:text-2xl"
+              class="mb-[15%] flex justify-center text-center font-sans text-lg text-white lg:text-2xl"
             ></ul>
           </div>
 
