--- a/index.html
+++ b/index.html
@@ -12,36 +12,36 @@
     <!-- Amplop -->
     <div
       id="amplop"
-      class="fixed left-0 top-0 z-[9999] h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out hidden"
+      class="fixed left-0 top-0 z-[9999] h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out"
     >
       <div class="container">
         <div class="h-full w-full px-4">
-          <div class="mx-auto max-w-xl py-8 text-center">
+          <div class="mx-auto max-w-xl text-center">
             <h3
-              class="my-12 border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 md:text-3xl"
+              class="my-[15%] border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 md:text-3xl"
             >
               The Wedding of
             </h3>
             <h1
-              class="mb-8 font-display text-5xl tracking-wider text-dark-2 md:text-6xl"
+              class="mb-[8%] font-display text-5xl tracking-wider text-dark-2 md:text-6xl"
             >
               Era <span class="text-dark-1">&</span> Alif
             </h1>
             <p
-              class="mb-12 text-center font-sans text-2xl font-semibold text-dark-1"
+              class="mb-[8%] text-center font-sans text-2xl font-semibold text-dark-1"
             >
               12 &nbsp <span class="text-3xl font-bold">.</span>&nbsp 08
               &nbsp<span class="text-3xl font-bold">.</span>&nbsp 2023
             </p>
             <h4
-              class="mb-2 font-serif-2 text-base font-semibold tracking-wide sm:text-lg md:text-xl"
+              class="font-serif-2 text-base font-semibold tracking-wide sm:text-lg md:text-xl"
             >
               Yth. Bapak/Ibu/Saudara/i :
             </h4>
             <p
-              class="mb-2 block py-2 font-display text-2xl tracking-wider md:text-3xl lg:text-4xl"
+              class="mb-[8%] block py-2"
             >
-              <span id="nama-tamu" class="mb-[2%] block"></span>
+              <span id="nama-tamu" class="mb-[2%] font-display text-2xl tracking-wider sm:text-3xl md:text-4xl block"></span>
               <span id="kategori-tamu" class="block"></span>
             </p>
           </div>
@@ -74,7 +74,7 @@
         <div class="h-screen w-full px-4">
           <div class="mx-auto max-w-xl text-center">
             <h3
-              class="group my-[10%] border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 p-4 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 transition md:text-3xl"
+              class="group my-[10%] border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 transition md:text-3xl"
             >
               We'<span class="text-xl md:text-2xl">re</span>
               <span
@@ -84,7 +84,7 @@
               >
             </h3>
             <ul
-              class="tracking group mb-[10%] inline-flex font-display text-5xl text-dark-2 transition md:text-6xl"
+              class="tracking group mb-[5%] inline-flex font-display text-5xl text-dark-2 transition md:text-6xl"
             >
               <li class="animate-e md:animate-emd">
                 E
