fix:mengubah margin pada #beranda

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="h-full w-full px-4">
           <div class="mx-auto max-w-xl text-center">
             <h3
-              class="my-[15%] border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 md:text-3xl"
+              class="my-[10%] border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 md:text-3xl"
             >
               The Wedding of
             </h3>
@@ -69,7 +69,7 @@
     </div>
 
     <!-- Beranda -->
-    <section id="beranda" class="py-8">
+    <section id="beranda">
       <div class="container">
         <div class="h-screen w-full px-4">
           <div class="mx-auto max-w-xl text-center">
