--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Amplop -->
     <div
       id="amplop"
-      class="fixed left-0 top-0 z-[9999] h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out"
+      class="fixed left-0 top-0 z-[9999] h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out hidden"
     >
       <div class="container">
         <div class="h-full w-full px-4">
@@ -71,10 +71,10 @@
     <!-- Beranda -->
     <section id="beranda">
       <div class="container">
-        <div class="h-screen w-full px-4">
+        <div class="h-screen w-full px-4 pt-[10%]">
           <div class="mx-auto max-w-xl text-center">
             <h3
-              class="group my-[10%] border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 transition md:text-3xl"
+              class="group mb-[10%] border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 transition md:text-3xl"
             >
               We'<span class="text-xl md:text-2xl">re</span>
               <span
@@ -104,7 +104,7 @@
               </li>
             </ul>
             <p
-              class="mb-[10%] text-center font-sans text-xl font-semibold text-dark-1"
+              class="mb-[15%] text-center font-sans text-xl font-semibold text-dark-1"
             >
               12 &nbsp <span class="text-3xl font-bold">.</span>&nbsp 08
               &nbsp<span class="text-3xl font-bold">.</span>&nbsp 2023
