fix: mengubah ukuran font pada #nama-tamu dan #kategori-tamu

--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
             >
               Yth. Bapak/Ibu/Saudara/i :
             </h4>
-            <p
-              class="mb-[8%] block py-2"
-            >
-              <span id="nama-tamu" class="mb-[2%] font-display text-2xl tracking-wider sm:text-3xl md:text-4xl block"></span>
-              <span id="kategori-tamu" class="block"></span>
+            <p class="mb-[8%] block py-2">
+              <span
+                id="nama-tamu"
+                class="mb-[2%] block font-display text-2xl tracking-wider sm:text-3xl md:text-4xl"
+              ></span>
+              <span
+                id="kategori-tamu"
+                class="block font-serif-3 font-semibold text-lg tracking-widest sm:text-xl md:text-2xl"
+              ></span>
             </p>
           </div>
           <div class="px-6 py-4 text-center">
@@ -86,22 +90,14 @@
             <ul
               class="tracking group mb-[5%] inline-flex font-display text-5xl text-dark-2 transition md:text-6xl"
             >
-              <li class="animate-e md:animate-emd">
-                E
-              </li>
+              <li class="animate-e md:animate-emd">E</li>
               <li class="animate-ra">ra</li>
-              <li class="animate-tern text-dark-1">
-                tern
-              </li>
+              <li class="animate-tern text-dark-1">tern</li>
               <li class="animate-dan text-dark-1 md:animate-danmd">
                 &nbsp;&&nbsp;
               </li>
-              <li class="animate-al md:animate-almd">
-                Al
-              </li>
-              <li class="animate-if">
-                if
-              </li>
+              <li class="animate-al md:animate-almd">Al</li>
+              <li class="animate-if">if</li>
             </ul>
             <p
               class="mb-[15%] text-center font-sans text-xl font-semibold text-dark-1"
