fix: mengubah padding dan margin pada #amplop

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       class="fixed left-0 top-0 z-[9999] h-full w-full bg-sage-1 transition duration-[400ms] ease-in-out"
     >
       <div class="container">
-        <div class="h-full w-full px-4">
+        <div class="h-full w-full px-4 pt-[10%]">
           <div class="mx-auto max-w-xl text-center">
             <h3
-              class="my-[10%] border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 md:text-3xl"
+              class="mb-[10%] border-b-2 border-t-2 border-b-sage-5 border-t-sage-5 py-6 font-serif text-2xl font-semibold uppercase tracking-widest text-dark-2 md:text-3xl"
             >
               The Wedding of
             </h3>
