fix: mengubah path css, js, dan gambar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Eternal | Era & Alif</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="dist/css/style.css" />
+    <link rel="stylesheet" href="./dist/css/style.css" />
   </head>
   <body class="selection:bg-sage-4 selection:text-white">
     <!-- Amplop -->
@@ -178,7 +178,7 @@
               <div
                 class="mx-auto w-10/12 overflow-hidden rounded-full border bg-white shadow-[rgba(50,_50,_105,_0.15)_0px_2px_5px_0px,_rgba(0,_0,_0,_0.05)_0px_1px_1px_0px]"
               >
-                <img src="dist/img/bride.png" alt="Bride" class="w-full" />
+                <img src="./dist/img/bride.png" alt="Bride" class="w-full" />
               </div>
               <div class="items-center px-6 py-8 text-center">
                 <div class="flex h-auto items-center justify-center md:h-24">
@@ -231,7 +231,7 @@
               <div
                 class="mx-auto w-10/12 overflow-hidden rounded-full border bg-white shadow-[rgba(50,_50,_105,_0.15)_0px_2px_5px_0px,_rgba(0,_0,_0,_0.05)_0px_1px_1px_0px]"
               >
-                <img src="dist/img/groom.png" alt="Groom" class="w-full" />
+                <img src="./dist/img/groom.png" alt="Groom" class="w-full" />
               </div>
               <div class="px-6 py-8 text-center">
                 <div class="flex h-auto items-center justify-center md:h-24">
