menambah script tamu

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               ></span>
               <span
                 id="kategori-tamu"
-                class="block font-serif-3 font-semibold text-lg tracking-widest sm:text-xl md:text-2xl"
+                class="block font-serif-3 text-lg font-semibold tracking-widest sm:text-xl md:text-2xl"
               ></span>
             </p>
           </div>
@@ -587,6 +587,6 @@
 
     <!-- Custom Script -->
     <script></script>
-    <script src="./dist/js/main.js"></script>
+    <script src="./dist/js/main.js" type="module"></script>
   </body>
 </html>
